# ufochain

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TERMS.txt  run_cmake_x64.bat  setenv_x64.bat  ufo_version.gen  version.h.in
android/: CMakeLists.txt  README.md  WalletJNI.java  common.cpp  common.h  jni.cpp  node_model.cpp  node_model.h  wallet_model.cpp  wallet_model.h
core/: aes.cpp  aes.h  block_crypt.cpp  block_crypt.h  block_rw.cpp  block_rw.h  block_validation.cpp  chainwork.cpp  difficulty.cpp  difficulty.h  ecc.cpp  ecc.h  ecc_bulletproof.cpp  ecc_native.h  fly_client.cpp  fly_client.h  lightning.cpp  lightning.h  mapped_file.cpp  mapped_file.h  merkle.cpp  merkle.h  navigator.cpp  navigator.h  negotiator.cpp  negotiator.h  peer_manager.cpp  peer_manager.h  proto.cpp  proto.h  radixtree.cpp  radixtree.h  serialization_adapters.h  treasury.cpp  treasury.h  uintBig.cpp  uintBig.h
docker/: Dockerfile  Makefile  README.md  install.sh  prepare.sh
explorer/: CMakeLists.txt  adapter.cpp  adapter.h  explorer-node.cfg  explorer_node.cpp  server.cpp  server.h
http/: CMakeLists.txt  http_client.cpp  http_client.h  http_connection.h  http_json_serializer.cpp  http_json_serializer.h  http_msg_creator.cpp  http_msg_creator.h  http_msg_reader.cpp  http_msg_reader.h
keykeeper/: CMakeLists.txt  hw_wallet.cpp  hw_wallet.h  index.html  local_private_key_keeper.cpp  local_private_key_keeper.h  main.cpp  private_key_keeper.h  trezor_key_keeper.cpp  trezor_key_keeper.h
mnemonic/: dictionary.cpp  dictionary.h  mnemonic.cpp  mnemonic.h
node/: CMakeLists.txt  db.cpp  db.h  node.cpp  node.h  node_client.cpp  node_client.h  processor.cpp  processor.h  txpool.cpp  txpool.h
p2p/: connection.h  line_protocol.h  msg_reader.cpp  msg_reader.h  msg_serializer.cpp  msg_serializer.h  protocol.h  protocol_base.cpp  protocol_base.h
pow/: CMakeLists.txt  bin2h.cmake  external_pow.h  external_pow_stub.cpp  external_progpow.cpp  external_progpow.h  minepool_client.cpp  miner_client.cpp  opencl_pow.cpp  stratum.cpp  stratum.h  stratum_server.cpp  stratum_server.h  ufoHash.cpp
pow/unittests/: CMakeLists.txt  equihash_test.cpp  progpow_test.cpp  progpow_test2.cpp  server_stub.cpp  stratum_test.cpp
ufo/: CMakeLists.txt  beam-node.cfg  cli.cpp
ui/: CMakeLists.txt  Info.plist  Info.plist.in  be_BY.qm  en_US.qm  es_ES.qm  fi_FI.qm  fr_FR.qm  it_IT.qm  ja_JP.qm  ko_KR.qm  nl_NL.qm  ru_RU.qm  sv_SE.qm  th_TH.qm  tr_TR.qm  translations.qrc  ufo.aps  ufo.desktop  ufo.desktop.in  ufo.rc  ufo.rc.in  ui.cpp  vi_VI.qm  (+1 more)
wallet/unittests/: CMakeLists.txt  bitcoin_rpc_environment.cpp  bitcoin_rpc_test.cpp  electrum_test.cpp  offline.cpp  swap_board_test.cpp  swap_test.cpp  swap_test_environment.cpp  test_helpers.h  util.cpp  util.h  wallet_api_test.cpp  wallet_db_test.cpp  wallet_test.cpp  wallet_test_environment.cpp
wallet/unittests/api_client/: test_accept_swap_btc.js  test_accept_swap_ltc.js  test_accept_swap_qtum.js  test_addr_list.js  test_create_address.js  test_delete_address.js  test_edit_address.js  test_get_utxo.js  test_init_bitcoin_alice.js  test_init_bitcoin_bob.js  test_init_litecoin_alice.js  test_init_litecoin_bob.js  test_list.js  test_send.js  test_split.js  test_start_swap_btc.js  test_start_swap_ltc.js  test_start_swap_qtum.js  test_status.js
(+385 files in other folders)
